Refactor : change years example

--- a/Cours1_Github_Exo1.html
+++ b/Cours1_Github_Exo1.html
@@ -23,8 +23,8 @@
         }
 
    
-        console.log(my_is_leap(2004));
-        console.log(my_is_leap(1900));
+        console.log(my_is_leap(1300));
+        console.log(my_is_leap(1590)));
 
   
     </script>
