--- a/Cours1_Github_Exo1.html
+++ b/Cours1_Github_Exo1.html
@@ -23,7 +23,8 @@
         }
 
    
-        console.log(my_is_leap(1360));
+        //console.log(my_is_leap(1360));
+        
         console.log(my_is_leap(1590)));
 
   
